Regression: Exact Boolean Fails On Simple Model #89330

Closed
opened 2021-06-21 10:39:21 +02:00 by Philip Holzmann · 13 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: Nvidia GTX 750 Ti

Blender Version
Broken: 2.93.0 release, 2.93.1 candidate baa7a53974, 3.0.0 alpha 6afafc46f6,
Worked: 2.91.0 release, 2.92.0 release

Short description of error
Two subsequent union operations result in an empty mesh. If the order of the operations is reversed, or the "Self" flag is enabled, it succeeds. However, there do not seem to be any self intersections in either the input meshes or the intermediate result. (At least by visual inspection.)

Turning the "Self" flag on is not viable though, since it is too memory hungry for the meshes I use.

Triangulating the intermediate result also fixes the issue.

No warnings are output, which makes it easy to have a small part of a model missing in the end.

Exact steps for others to reproduce the error
Open the file.

293_boolean_empty_result.blend

Object A has two boolean modifiers, one to union with B and one to union with C.
As you can see, they result in an empty mesh.
Moving either object can resolve the issue, but the margin seems to be comparatively big.

**System Information** Operating system: Windows 10 64 bit Graphics card: Nvidia GTX 750 Ti **Blender Version** Broken: 2.93.0 release, 2.93.1 candidate baa7a5397486, 3.0.0 alpha 6afafc46f639, Worked: 2.91.0 release, 2.92.0 release **Short description of error** Two subsequent *union* operations result in an empty mesh. If the order of the operations is reversed, or the "Self" flag is enabled, it succeeds. However, there do not seem to be any self intersections in either the input meshes or the intermediate result. (At least by visual inspection.) Turning the "Self" flag on is not viable though, since it is too memory hungry for the meshes I use. Triangulating the intermediate result also fixes the issue. No warnings are output, which makes it easy to have a small part of a model missing in the end. **Exact steps for others to reproduce the error** Open the file. [293_boolean_empty_result.blend](https://archive.blender.org/developer/F10185619/293_boolean_empty_result.blend) Object A has two boolean modifiers, one to union with B and one to union with C. As you can see, they result in an empty mesh. Moving either object can resolve the issue, but the margin seems to be comparatively big.

Added subscriber: @Foaly

Added subscriber: @Foaly

Added subscriber: @howardt

Added subscriber: @howardt

@howardt I think this would be for you.

@howardt I think this would be for you.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux

It looks good on the commit before a3f091d7ce ... but I'm having weird problems with conflicting function declarations, and can't see if that commit is responsible or not! Perhaps someone else could try building that?

Nevermind that; I got a later commit to work and it's behaving correctly at that point.

Turns out I wasn't building Blender with GMP support, so it wasn't even using the exact Boolean modifier (:

a3f091d7ce is, indeed, the first commit where the problem appears.

~~It looks good on the commit before a3f091d7ce ... but I'm having weird problems with conflicting function declarations, and can't see if that commit is responsible or not! Perhaps someone else could try building that?~~ ~~Nevermind that; I got a later commit to work and it's behaving correctly at that point.~~ Turns out I wasn't building Blender with GMP support, so it wasn't even using the exact Boolean modifier (: a3f091d7ce is, indeed, the first commit where the problem appears.

Added subscriber: @Nico-Traber

Added subscriber: @Nico-Traber

Changing priority to high, since this is a recent regression.

Changing priority to *high*, since this is a recent regression.
Howard Trickey self-assigned this 2021-06-23 14:46:36 +02:00
Member

For some reason my code is only finding two patches and one cell, which is wrong. Need to investigate more.

For some reason my code is only finding two patches and one cell, which is wrong. Need to investigate more.

I think I may have found a simpler case, with just 3 cubes. Maybe that helps?
293_boolean_empty_result_02.blend

2.92 293_boolean_empty_result_02_2.92.png
2.93 293_boolean_empty_result_02_2.93.png
I think I may have found a simpler case, with just 3 cubes. Maybe that helps? [293_boolean_empty_result_02.blend](https://archive.blender.org/developer/F10192828/293_boolean_empty_result_02.blend) | **2.92** | ![293_boolean_empty_result_02_2.92.png](https://archive.blender.org/developer/F10192831/293_boolean_empty_result_02_2.92.png) | -- | -- | | **2.93** | ![293_boolean_empty_result_02_2.93.png](https://archive.blender.org/developer/F10192832/293_boolean_empty_result_02_2.93.png)
Member

I think it will help a lot, thanks! It was tedious to track where things went wrong with so many faces in that original file.

I think it will help a lot, thanks! It was tedious to track where things went wrong with so many faces in that original file.

This issue was referenced by 7223a0348f

This issue was referenced by 7223a0348f53df7e19677f05aaef89852c0f0187
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89330
No description provided.